force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Bounce__c.field-meta.xml
<CustomField>
    <fullName>Bounce__c</fullName>
    <formula>IF( ( et4ae5__SoftBounce__c = true  || et4ae5__HardBounce__c = true ) , true , false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bounce</label>
    <type>Checkbox</type>
</CustomField>