force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/BounceType__c.field-meta.xml
<CustomField>
    <fullName>BounceType__c</fullName>
    <formula>IF(
et4ae5__SoftBounce__c = true, &quot;Soft Bounce&quot;,
IF(
et4ae5__HardBounce__c = true, &quot;Hard Bounce&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bounce Type</label>
    <type>Text</type>
</CustomField>