force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <formula>IF( ( et4ae5__SoftBounce__c == false &amp;&amp; et4ae5__HardBounce__c = false ) , true , false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivered</label>
    <type>Checkbox</type>
</CustomField>