force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Dream_id__c.field-meta.xml
<CustomField>
    <fullName>Dream_id__c</fullName>
    <label>DreamID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>