force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/SendToDream__c.field-meta.xml
<CustomField>
    <fullName>SendToDream__c</fullName>
    <defaultValue>true</defaultValue>
    <description>By default true. Dream chanbges the field to false.</description>
    <label>Send to Dream</label>
    <type>Checkbox</type>
</CustomField>