force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/SentEmailStatus__c.field-meta.xml
<CustomField>
    <fullName>SentEmailStatus__c</fullName>
    <formula>IF( ( et4ae5__SoftBounce__c = true  || et4ae5__HardBounce__c = true ) , &quot;Bounce&quot; , &quot;Delivered&quot;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sent Email Status</label>
    <type>Text</type>
</CustomField>