force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( et4ae5__Clicked__c = true, &quot;Clicked&quot;, 
IF( et4ae5__Opened__c = true, &quot;Opened&quot;,
IF( et4ae5__HardBounce__c = false  &amp;&amp; et4ae5__SoftBounce__c = true , &quot;Delivered&quot;, &quot;Sent&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>